--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Pi Temperature Monitor</title>
+    <title>Pepper's Temperature Monitor</title>
     <meta http-equiv="refresh" content="5">
     <style>
         body { font-family: sans-serif; text-align: center; }
